--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+/* google fontes */
+:root{
+ --default-font: "Playfair Display", serif;
+ --heading-font: "Protest Strike", serif;
+ --nav-font: "Roboto", sans-serif;
+}
+
+
 :root {
     --background-color: #ebebeb;
     --nav-fundo: #dbdbdb;
@@ -680,6 +688,84 @@ a {
     transform: scale(1, 1);
     opacity: 0;
   }
+}
+
+/* Stats Section */
+.stats .stats-item {
+  background-color: var(--surface-color);
+  box-shadow: 0px 0 30px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+}
+
+.stats .stats-item i {
+  color: var(--accent-color);
+  font-size: 42px;
+  line-height: 0;
+  margin-right: 20px;
+}
+
+.stats .stats-item span {
+  color: var(--heading-color);
+  font-size: 36px;
+  display: block;
+  font-weight: 600;
+}
+
+.stats .stats-item p {
+  padding: 0;
+  margin: 0;
+  font-family: var(--default-font);
+  font-size: 16px;
+}
+
+/* scroll top button */
+.scroll-top {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  right: 15px;
+  bottom: 15px;
+  z-index: 99999;
+  background-color: var(--accent-color);
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  transition: all 0.4s;
+}
+
+.scroll-top i {
+  font-size: 24px;
+  color: var(--nav-fundo);
+  line-height: 0;
+}
+
+.scroll-top.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.scroll-top:hover {
+  background: black;
+  color: var(--titulo-color);
+}
+
+.scroll-top:hover i{
+color: var(--nav-color2);
+}
+
+.features .features-image {
+  position: relative;
+  min-height: 400px;
+}
+
+.features .features-image img {
+  position: absolute;
+  inset: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
 }
 
 
